@@ -1,2 +1,2 @@
-#define VERSION "1.06.00"   
+#define VERSION "1.07.00"   
 #define YEARS   "2008-2013"
