@@ -1,4 +1,4 @@
-// Generated by Flexc++ V1.06.00 on Tue, 06 Aug 2013 13:39:32 +0200
+// Generated by Flexc++ V1.07.00 on Sun, 11 Aug 2013 11:11:42 +0200
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
